--- a/console/index.html
+++ b/console/index.html
@@ -21,7 +21,7 @@
             <a class="navbar-brand" href="#">API Console</a>
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Documentation</a>
+                    <a class="nav-link" href="https://github.com/sabbir-rupom/rest-api-flight#readme">Documentation</a>
                 </li>
             </ul>
         </nav>
