--- a/console/index.html
+++ b/console/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <meta name="description" content="The Quiz">
+        <meta name="description" content="REST-API console">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
         <title>API Console</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
@@ -60,9 +60,16 @@
                             </div>
                         </div>
                         <div class="form-group row">
-                            <label class="col-sm-2 col-form-label">URL</label>
-                            <div class="col-sm-10">
-                                <input type="text" class="form-control" name="url" placeholder="api/">
+                            <label class="col-sm-2 col-form-label">Base URL</label>
+                            <div class="col-sm-4">
+                                <input type="text" class="form-control" name="baseUrl" placeholder="site url">
+                                <small class="form-text text-muted">
+                                    check base url before submitting API request
+                                </small>
+                            </div>
+                            <label class="col-sm-2 col-form-label text-right">API Path</label>
+                            <div class="col-sm-4">
+                                <input type="text" class="form-control" name="apiPath" placeholder="api/">
                             </div>
                         </div>
                         <div class="form-group row">
@@ -76,7 +83,7 @@
                             <div class="col-sm-3">
                                 <input type="text" class="form-control" name="tokenSecret" placeholder="Enter Secret Key" value="0123456789">
                             </div>
-                            <label class="col-sm-2 offset-sm-2 col-form-label">User ID</label>
+                            <label class="col-sm-2 offset-sm-2 col-form-label text-right">User ID</label>
                             <div class="col-sm-3">
                                 <input type="text" class="form-control" name="userId" readonly>
                             </div>
