--- a/public/console/index.html
+++ b/public/console/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <meta name="description" content="The Quiz">
+        <meta name="description" content="REST-API console">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
         <title>API Console</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
