--- a/console/index.html
+++ b/console/index.html
@@ -7,11 +7,13 @@
         <title>API Console</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
         <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" crossorigin="anonymous">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
         <script src="//cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.2/rollups/hmac-sha256.js"></script>
         <script src="//cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.2/components/enc-base64-min.js"></script>
+
         <script src="console.js"></script>
 
     </head>
@@ -19,10 +21,13 @@
         <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
             <!-- Brand -->
             <a class="navbar-brand" href="#">API Console</a>
-            <ul class="navbar-nav">
+            <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="https://github.com/sabbir-rupom/rest-api-flight#readme">Documentation</a>
+                    <a class="nav-link" href="https://github.com/sabbir-rupom/rest-api-flight#readme">
+                        <i class="fa fa-file"></i>&nbsp;&nbsp;Documentation
+                    </a>
                 </li>
+
             </ul>
         </nav>
 
@@ -150,3 +155,4 @@
         </div>
     </body>
 </html> 
+
